Improve uppercase-after finder